# Level_5_Project

./: .gitignore  CMakeLists.txt  Cluster_table_entry.csv  Epyc_table_entry.csv  Laptop_table_entry.csv  README.md  clique_compile.sh  generate_graphs.py  main.mk  pipeline.py
results/results_0/: ClusterNFS_tests_Colour_Class.csv  ClusterNFS_tests_Comment.csv  ClusterNFS_tests_FMT.csv  ClusterNFS_tests_Max.csv  ClusterNFS_tests_Newline.csv  ClusterNFS_tests_Original.csv  ClusterNFS_tests_Vector.csv  Cluster_tests_Colour_Class.csv  Cluster_tests_Comment.csv  Cluster_tests_FMT.csv  Cluster_tests_Max.csv  Cluster_tests_Newline.csv  Cluster_tests_Original.csv  Cluster_tests_Vector.csv  EpycNFS_tests_Colour_Class.csv  EpycNFS_tests_Comment.csv  EpycNFS_tests_FMT.csv  EpycNFS_tests_Max.csv  EpycNFS_tests_Newline.csv  EpycNFS_tests_Original.csv  EpycNFS_tests_Vector.csv  Epyc_tests_Colour_Class.csv  Epyc_tests_Comment.csv  Epyc_tests_FMT.csv  Epyc_tests_Max.csv  Epyc_tests_Newline.csv  Epyc_tests_Original.csv  Epyc_tests_Vector.csv  Laptop_tests_Colour_Class.csv  Laptop_tests_Comment.csv  Laptop_tests_FMT.csv  Laptop_tests_Max.csv  Laptop_tests_Newline.csv  Laptop_tests_Original.csv  Laptop_tests_Vector.csv
results/results_1/: ClusterNFS_tests_Colour_Class.csv  ClusterNFS_tests_Comment.csv  ClusterNFS_tests_FMT.csv  ClusterNFS_tests_Max.csv  ClusterNFS_tests_Newline.csv  ClusterNFS_tests_Original.csv  ClusterNFS_tests_Vector.csv  Cluster_tests_Colour_Class.csv  Cluster_tests_Comment.csv  Cluster_tests_FMT.csv  Cluster_tests_Max.csv  Cluster_tests_Newline.csv  Cluster_tests_Original.csv  Cluster_tests_Vector.csv  EpycNFS_tests_Colour_Class.csv  EpycNFS_tests_Comment.csv  EpycNFS_tests_FMT.csv  EpycNFS_tests_Max.csv  EpycNFS_tests_Newline.csv  EpycNFS_tests_Original.csv  EpycNFS_tests_Vector.csv  Epyc_tests_Colour_Class.csv  Epyc_tests_Comment.csv  Epyc_tests_FMT.csv  Epyc_tests_Max.csv  Epyc_tests_Newline.csv  Epyc_tests_Original.csv  Epyc_tests_Vector.csv  Laptop_tests_Colour_Class.csv  Laptop_tests_Comment.csv  Laptop_tests_FMT.csv  Laptop_tests_Max.csv  Laptop_tests_Newline.csv  Laptop_tests_Original.csv  Laptop_tests_Vector.csv
results/results_2/: ClusterNFS_tests_Colour_Class.csv  ClusterNFS_tests_Comment.csv  ClusterNFS_tests_FMT.csv  ClusterNFS_tests_Max.csv  ClusterNFS_tests_Newline.csv  ClusterNFS_tests_Original.csv  ClusterNFS_tests_Vector.csv  Cluster_tests_Colour_Class.csv  Cluster_tests_Comment.csv  Cluster_tests_FMT.csv  Cluster_tests_Max.csv  Cluster_tests_Newline.csv  Cluster_tests_Original.csv  Cluster_tests_Vector.csv  EpycNFS_tests_Colour_Class.csv  EpycNFS_tests_Comment.csv  EpycNFS_tests_FMT.csv  EpycNFS_tests_Max.csv  EpycNFS_tests_Newline.csv  EpycNFS_tests_Original.csv  EpycNFS_tests_Vector.csv  Epyc_tests_Comment.csv  (+13 more)
src/: clique.cc  common.mk  do_not_print.cc  do_not_print.hh  glasgow_clique_solver.cc  proof.cc  proof.hh
(+76 files in other folders)
